fixed spacing for ULs in blog posts

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -158,6 +158,9 @@
   .dark .aside code {
     @apply bg-primary text-primary-foreground;
   }
+  .blog-post ul {
+    @apply pl-3;
+  }
   .blog-post ul li {
     list-style-type: disc;
     list-style-position: inside;
